# dbd-django-oidc-client

./: .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  dependency-review.yml  release.yml
scripts/: check_wheel_namespace.py
src/dbd/oidc_client/: __init__.py  apps.py  claims.py  client.py  conf.py  http.py  telemetry.py  urls.py  views.py
tests/: settings.py  test_authlib_engine.py  test_client.py  test_concurrent_tabs.py  test_transport.py
